--- a/knodeui.rc
+++ b/knodeui.rc
@@ -3,7 +3,7 @@
 
 <MenuBar>
   <Menu noMerge="1" name="file"><text>&amp;File</text>
-    <Action name="file_save"/>
+    <Action name="save_message"/>
     <Action name="file_print"/>
     <Separator/>
     <Action name="net_sendPending"/>
@@ -13,11 +13,11 @@
 
   </Menu>
   <Menu noMerge="1" name="edit"><text>&amp;Edit</text>
-    <Action name="edit_copy"/>
-    <Action name="edit_select_all"/>
+    <Action name="kmail_copy"/>
+    <Action name="mark_all_text"/>
     <Separator/>
     <Action name="article_search"/>
-    <Action name="find_in_article"/>
+    <Action name="find_in_messages"/>
     <Separator/>
     <Action name="fetch_article_with_id"/>
   </Menu>
@@ -34,11 +34,9 @@
     <Action name="view_Sort"/>
     <Action name="view_Refresh"/>
     <Separator/>
-    <Action name="view_rot13"/>
+    <Action name="view_source"/>
     <Separator/>
-    <Action name="article_viewSource"/>
-    <Separator/>
-    <Action name="view_useFixedFont"/>
+    <Action name="toggle_fixedfont"/>
     <Action name="view_fancyFormating"/>
     <Action name="set_charset"/>
   </Menu>
@@ -123,7 +121,7 @@
 
 <ToolBar noMerge="1" name="mainToolBar"><text>Main Toolbar</text>
   <Action name="article_postNew"/>
-  <Action name="file_save"/>
+  <Action name="save_message"/>
   <Action name="file_print"/>
   <Separator/>
   <Action name="account_dnlHeaders"/>
@@ -214,17 +212,15 @@
 </Menu>
 
 <Menu name="body_popup">
-  <Action name="file_save_as"/>
+  <Action name="save_message"/>
   <Action name="file_print"/>
   <Separator/>
-  <Action name="edit_copy"/>
-  <Action name="edit_select_all"/>
+  <Action name="kmail_copy"/>
+  <Action name="mark_all_text"/>
   <Separator/>
-  <Action name="article_viewSource"/>
+  <Action name="view_source"/>
   <Separator/>
-  <Action name="view_rot13"/>
-  <Separator/>
-  <Action name="view_useFixedFont"/>
+  <Action name="toggle_fixedfont"/>
   <Action name="view_fancyFormating"/>
   <Action name="set_charset"/>
 </Menu>
@@ -232,7 +228,6 @@
 <Menu name="url_popup">
   <Action name="open_url"/>
   <Action name="copy_url"/>
-  <Action name="add_bookmark"/>
 </Menu>
 
 <Menu name="mailto_popup">
@@ -241,9 +236,5 @@
   <Action name="copy_url"/>
 </Menu>
 
-<Menu name="attachment_popup">
-  <Action name="open_attachment"/>
-  <Action name="save_attachment"/>
-</Menu>
 
 </kpartgui>
