--- a/knreaderui.rc
+++ b/knreaderui.rc
@@ -1,27 +1,25 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="KNReader" version="390">
+<kpartgui name="KNReader" version="391">
 
 <MenuBar>
   <Menu noMerge="1" name="file"><text>&amp;File</text>
-    <Action name="file_save"/>
+    <Action name="save_message"/>
     <Action name="file_print"/>
     <Separator/>
     <Action name="file_close"/>
   </Menu>
   <Menu noMerge="1" name="edit"><text>&amp;Edit</text>
-    <Action name="edit_copy"/>
-    <Action name="edit_select_all"/>
-    <Action name="find_in_article"/>
+    <Action name="kmail_copy"/>
+    <Action name="mark_all_text"/>
+    <Action name="find_in_messages"/>
   </Menu>
   <Menu noMerge="1" name="view"><text>&amp;View</text>
     <Action name="view_headers"/>
     <Action name="view_attachments"/>
     <Separator/>
-    <Action name="view_rot13"/>
+    <Action name="view_source"/>
     <Separator/>
-    <Action name="article_viewSource"/>
-    <Separator/>
-    <Action name="view_useFixedFont"/>
+    <Action name="toggle_fixedfont"/>
     <Action name="view_fancyFormating"/>
     <Action name="set_charset"/>
   </Menu>
@@ -36,9 +34,9 @@
 </MenuBar>
 
 <ToolBar noMerge="1" name="mainToolBar"><text>Main Toolbar</text>
-  <Action name="file_save"/>
+  <Action name="save_message"/>
   <Action name="file_print"/>
-  <Action name="edit_copy"/>
+  <Action name="kmail_copy"/>
   <Separator/>
   <Action name="article_postReply"/>
   <Action name="article_mailReply"/>
@@ -46,17 +44,15 @@
 </ToolBar>
 
 <Menu name="body_popup">
-  <Action name="file_save_as"/>
+  <Action name="save_message"/>
   <Action name="file_print"/>
   <Separator/>
-  <Action name="edit_copy"/>
-  <Action name="edit_select_all"/>
+  <Action name="kmail_copy"/>
+  <Action name="mark_all_text"/>
   <Separator/>
-  <Action name="article_viewSource"/>
+  <Action name="view_source"/>
   <Separator/>
-  <Action name="view_rot13"/>
-  <Separator/>
-  <Action name="view_useFixedFont"/>
+  <Action name="toggle_fixedfont"/>
   <Action name="view_fancyFormating"/>
   <Action name="set_charset"/>
 </Menu>
@@ -64,18 +60,12 @@
 <Menu name="url_popup">
   <Action name="open_url"/>
   <Action name="copy_url"/>
-  <Action name="add_bookmark"/>
 </Menu>
 
 <Menu name="mailto_popup">
   <Action name="add_addr_book"/>
   <Action name="openin_addr_book"/>
   <Action name="copy_url"/>
-</Menu>
-
-<Menu name="attachment_popup">
-  <Action name="open_attachment"/>
-  <Action name="save_attachment"/>
 </Menu>
 
 </kpartgui>
